--- a/post.html
+++ b/post.html
@@ -50,7 +50,7 @@
 			<img src="images/dash.jpg">
 		</div>
 		
-		<h3>Laboratory Management System</h3>
+		<h3>Laboratory and the cyber security Management System</h3>
 
 		<p>This was a project I started back in november 2022 when I first learned python. I was the sole creator/developer for the first year of the project before I was able to hire help.
 		<br>
@@ -69,7 +69,7 @@
 		<h5>Technologies:</h5>
 		<ul>
 			<li>- Python</li>
-			<li>Kali linux</li>
+			<li>- Kali linux</li>
 			<li>- Django + Django REST Framework</li>
 			<li>- React JS</li>
 			<li>- Postgres</li>
