--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Prudent NGAIPERA DONG</title>
 
-
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
 	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
@@ -186,7 +185,26 @@
 			</form>
 		</div>
 	</section> 
+<?php
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+    $name = $_POST["name"];
+    $subject = $_POST["subject"];
+    $email = $_POST["email"];
+    $message = $_POST["message"];
 
+    // Modifier les paramètres pour la fonction mail() en fonction de votre configuration serveur
+    $to = "prudentngaipera4@gmail.com";
+    $headers = "From: $email";
+    $mailBody = "Name: $name\nSubject: $subject\nEmail: $email\nMessage: $message";
+
+    // Envoi de l'email
+    mail($to, $subject, $mailBody, $headers);
+
+    // Redirection vers une page de confirmation (facultatif)
+    header("Location: confirmation.html");
+    exit();
+}
+?>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
