--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Prudent NGAIPERA DONG</title>
+	<title>Prudent NGAIPERA-DONG</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
 
@@ -17,7 +17,7 @@
 	<section class="s1">
 		<div class="main-container">
 			<div class="greeting-wrapper">
-				<h1>Hi, I'm Prudent NGAIPERA DONG</h1>
+				<h1>Hi, I'm Prudent NGAIPERA-DONG</h1>
 			</div>
 
 
