--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 							<li>Dart</li>
 							<li>React</li>
 							<li>Postgres</li>
+							<li>Laravel</li>
 							<li>Kali linux</li>
 						</ul>
 
@@ -103,7 +104,7 @@
 							<li>Google Maps API</li>
 							<li>JS Charts</li>
 							<li>AWS (RDS/S3)</li>
-							<li>Heroku</li>
+							<li>Windev</li>
 							<li>HTML/CSS/Javascript</li>
 							<li>Java</li>
 						
